--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,10 +13,10 @@ server.error.include-message=always
 cors.allowed.origins=*
 cors.allowed.methods=*
 
-# AWS S3 Configuration (MinIO for local development)
-aws.region=us-east-1
-aws.s3.bucket=product-images
-aws.s3.endpoint-override=http://localhost:9000
-aws.s3.path-style-enabled=true
-aws.access-key-id=minioadmin
-aws.secret-access-key=minioadmin123
+# AWS S3 Configuration
+aws.region=eu-west-1
+aws.s3.bucket=amigoscode-product-images-prod
+aws.s3.endpoint-override=
+aws.s3.path-style-enabled=false
+aws.access-key-id=
+aws.secret-access-key=
