fix: enable CommandLineRunner bean and configure multipart and header size properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,12 @@ server.error.include-message=always
 cors.allowed.origins=*
 cors.allowed.methods=*
 
+server.max-http-request-header-size=65KB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.file-size-threshold=2KB
+
 # AWS S3 Configuration (MinIO for local development)
 aws.region=us-east-1
 aws.s3.bucket=product-images
